Dont strip version on artifacts. leads to conflicts when deploying the configuration service
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@953 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TransportOrderView.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TransportOrderView.mxml
@@ -157,13 +157,13 @@
 	<mx:DataGrid id="transportOrdersLst" width="95%" height="400" allowMultipleSelection="true" dataProvider="{tmsModelLocator.allTransportOrders}" y="63" x="10">
 		<mx:columns>
 			<mx:DataGridColumn headerText="ID" dataField="id" />
-			<mx:DataGridColumn headerText="Current State" dataField="state" />
+			<mx:DataGridColumn headerText="State" dataField="state" labelFunction="formatAsString" />
 			<mx:DataGridColumn headerText="Priority" dataField="priority" labelFunction="formatAsString" />
 			<mx:DataGridColumn headerText="Transport Unit" dataField="transportUnit" labelFunction="formatBarcode" />
 			<mx:DataGridColumn headerText="Source Location" dataField="sourceLocation" labelFunction="formatAsString"/>
+            <mx:DataGridColumn headerText="Current Location" dataField="transportUnit" labelFunction="formatAsActualLocation" />
 			<mx:DataGridColumn headerText="Target Location" dataField="targetLocation" labelFunction="formatAsString" />
 			<mx:DataGridColumn headerText="Target Location Group" dataField="targetLocationGroup" labelFunction="formatLocationGroup" />
-			<mx:DataGridColumn headerText="Actual Location" dataField="transportUnit" labelFunction="formatAsActualLocation" />
 			<mx:DataGridColumn headerText="Created" dataField="creationDate" labelFunction="formatAsDate"/>
 			<mx:DataGridColumn headerText="Started" dataField="startDate" labelFunction="formatAsDate"/>
 			<mx:DataGridColumn headerText="Finished" dataField="endDate" labelFunction="formatAsDate"/>
